--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -16,6 +16,22 @@
   $padding-base-vertical: 8px;
   $padding-base-horizontal: 16px;
 
+  $navbar-height: 50px;
+  $gray-lighter: #fbfbfb;
+  $gray: #555555;
+  $gray-lighter: #eeeeee;
+  $gray-light: #777777;
+
+  $btn-success-color: #ffffff;
+  $font-size-base: 14px;
+  $dropdown-link-color: #333333;
+
+/*------------------------------------------
+  plugins
+  -----------------------------------------*/
+  $input-height-base: 38px;
+  $input-bg: #ffffff;
+
 /*------------------------------------------
   Fonts
   -----------------------------------------*/
@@ -35,3 +51,4 @@
   Wells
   -----------------------------------------*/
   $well-bg: #fbfbfb;
+
