--- a/frontend/app/assets/stylesheets/spree/frontend/_variables.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/_variables.scss
@@ -2,3 +2,8 @@
   Colors
 --------------------------------*/
 $brand-primary: #1c5c92;
+
+$line-height-computed: 20px;
+$gray-dark: #333333;
+$gray-darker: rgba(34,34,34,0.4);
+$padding-base-horizontal: 16px;
