--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -26,6 +26,8 @@
   $font-size-base: 14px;
   $dropdown-link-color: #333333;
 
+  $font-size-h1: 36px;
+
 /*------------------------------------------
   plugins
   -----------------------------------------*/
