--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -24,6 +24,7 @@
 
   $btn-success-color: #ffffff;
   $font-size-base: 14px;
+  $font-size-h1: 16px;
   $dropdown-link-color: #333333;
 
   $font-size-h1: 36px;
